--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
       <artifactId>jooby-jackson</artifactId>
       <version>1.6.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
 
   </dependencies>
 
