--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,19 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.elasticsearch</groupId>
+      <artifactId>elasticsearch</artifactId>
+      <version>7.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.elasticsearch.client</groupId>
+      <artifactId>elasticsearch-rest-high-level-client</artifactId>
+      <version>7.0.1</version>
+    </dependency>
+
     <!-- Server -->
     <dependency>
       <groupId>org.jooby</groupId>
